[tool.poetry]
name = "scraphero"
version = "0.1.0"
description = ""
authors = ["Matias Cardenas <cardenasmatias.1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
playwright = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
